add resque to deploy

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 /config/database.yml
 /config/partsbuilder.yml
 
+# Ignore foreman config
+Procfile
+
 # Ignore parsBuilder processing files
 /public/orders
 /public/design_processing
